# quic_test

./: .gitmodules  Dockerfile  mqtt-receive.yml  msquic.h  pcap_results.csv  perf_tests.sh  quic_api.c  run_tests_quic.sh  send_msg_quic.sh
emqx_confs/: cluster.hocon.2024.11.25.12.38.46.996.bak  cluster.hocon.2024.11.25.12.40.39.129.bak  cluster.hocon.2024.11.25.12.40.40.803.bak  cluster.hocon.2024.11.25.12.48.27.024.bak
mqtt-tests-main/: analise_resultss.ipynb  client.csr  pcap_results.csv  pcap_results_v1.csv  requirements.txt  run_all.sh  run_tests.sh  test_analysis.py
mqtt-tests-main/emqx_confs/: cluster.hocon  cluster.hocon.2024.01.18.11.13.13.143.bak  vm.2024.01.18.09.48.17.args  vm.2024.01.18.11.11.55.args  vm.2024.01.18.15.09.20.args  vm.2025.06.05.10.28.52.args  vm.2025.06.05.10.41.59.args  (+4 more)
quic_mqtt/: quic_client.c
quic_test/: CMakeLists.txt  Dockerfile  SslKeyLogFile_cb  Untitled-1.dockerfile  analise.ipynb  analise_results.ipynb  build_diagram.py  cenas.pcacp  cenas.txt  check_losses.py  collect_statistics.py  compere.txt  docker-compose.yml  file.txt  just_test.sh  ket_0.txt  key_1.txt  log_loss.md  loss_detection.py  mqtt-receive.yml  pcap_results.csv  perf_tests.sh  quic_analysis.csv  quic_analysis.xlsx  quic_analysis_normal.csv  quic_api.c  resiltados_stream10.csv  result_stream1.csv  resultado.csv  resultados.csv  resultados.md  resultados.txt  resultados_new.csv  results.txt  resutlads.txt  run_all.sh  run_all_without_multistream.sh  run_tests.sh  run_tests_quic.sh  run_tests_quic_perf.sh  (+4 more)
quic_test/quic_mqtt/: CMakeLists.txt  quic_client.c
(+3078 files in other folders)
